<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagen2">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="222dp"
        android:layout_height="39dp"
        android:layout_marginStart="12dp"
        android:paddingBottom="12dp"
        android:text="@string/titulo11"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/parrafo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/parrafo"
        android:layout_width="371dp"
        android:layout_height="148dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/parrafo"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/empezar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@color/meow"
        android:text="@string/boton2"
        app:cornerRadius="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="648dp" />

</androidx.constraintlayout.widget.ConstraintLayout>